--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         <div class="fontSection">
             <h1>Take the hassle out of icons in your</h1>
             <p><strong>Font Awesome</strong> is the Internet's icon library and toolkit, used by millions of designers, developers, and content creators.</p>
+
+            <div class="startbtn">
+                <button type="button">Start for Free</button>
+                <button type="button">Get $20 OffPro</button>
+            </div>
         </div>
     </main>
     <div class="kitsSection">
