--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <div class="startbtn">
                 <button type="button">Start for Free</button>
-                <button type="button">Get $20 OffPro</button>
+                <button type="button" class="btnn">Get $20 Off Pro</button>
             </div>
         </div>
     </main>
