--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@
         <div class="kitHolder1">
         </div>
         <div class="kitHolder">
-            
+            <img src="images/583fcd085065e59bc5a75eb1b6562d6d7d3fec48_2_690x362FA.png" alt="" width="690", height="362">
         </div>
         <div class="kitHolder1">
-            
         </div>
     </div>
 </body>
