--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p><span class="span1">Dont Miss Out! </span> To celebrate the release of <span>Font Awesome Sharp</span>, get <span>$20 off a new Pro subscription</span> for a limited time!</span></p>
         </div>
         <div class="fontSection">
-            <h1>Take the hassle out of icons in your</h1>
+            <h1>Take the hassle out of icons in your <span> website</span></h1>
             <p><strong>Font Awesome</strong> is the Internet's icon library and toolkit, used by millions of designers, developers, and content creators.</p>
 
             <div class="startbtn">
