--- a/index.html
+++ b/index.html
@@ -55,8 +55,26 @@
         <div class="kitHolder">
             <img src="images/583fcd085065e59bc5a75eb1b6562d6d7d3fec48_2_690x362FA.png" alt="" width="690", height="362">
         </div>
+        
         <div class="kitHolder1">
         </div>
+    </div>
+    <div class="updatesSection">
+        <h5>LATEST UPDATES</h5>
+        <div class="colspan1">
+            <h3>Discover what's new in Font Awesome.</h3>
+            <p>Introducing Font Awesome Sharp!</p>
+            <p>Font Awesome Sharp Solid, the first style in our new Sharp family, is ready to use when you need a special touch of class for your project! Read the announcement and see what's new in the 6.2 release.</p>
+        </div>
+        <div class="colspan1">
+            <h3>More Icons + Styles</h3>
+            <p>Font Awesome 6 contains thousands of new icons in our Classic Styles: Solid, Regular, Light, Duotone, and Thin — not to mention our Brand icons. Plus, with Sharp Solid, you're sure to find the perfect icon for your project.</p>
+        </div>
+        <div class="colspan1">
+            <h3>More Plugins + Packages</h3>
+            <p>Font Awesome 6 makes it even easier to use icons where you want to. More plugins and packages to match your stack. Less time wrestling browser rendering.</p>
+        </div>
+        <div class="colspan2"></div>
     </div>
 </body>
 </html>
